kubernetesYAML/shared-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shared-postgres
  namespace: weather-alert
spec:
  serviceName: shared-postgres
  replicas: 1
  selector:
    matchLabels:
      app: shared-postgres
  template:
    metadata:
      labels:
        app: shared-postgres
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:16
          volumeMounts:
            - name: shared-postgres-pg-data
              mountPath: /var/lib/postgresql/data
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data
  volumeClaimTemplates:
    - metadata:
        name: shared-postgres-pg-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 4Gi
