kubernetesYAML/weather-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
  namespace: weather-alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
        - name: weather-service
          image: blaz040/weather-service:1.0.0-SNAPSHOT
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
