kubernetesYAML/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: weather-alert
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - port: 8084
      targetPort: 8084
