kubernetesYAML/shared-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-postgres
  namespace: weather-alert
spec:
  type: ClusterIP
  selector:
    app: shared-postgres
  ports:
    - port: 5432
      targetPort: 5432
