kubernetesYAML/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: weather-alert
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - port: 8080
      targetPort: 8080
