kubernetesYAML/weather-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: weather-alert
spec:
  selector:
    app: weather-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
