kubernetesYAML/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /jenkins/$2
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: blaz040.me
    http:
      paths:
      - path: /jenkins(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: jenkins
            port:
              number: 8080
